--- a/index.html
+++ b/index.html
@@ -30,8 +30,110 @@
     <div id="contenedor">
         <header id="cabecera">
         </header>
-        <div id="contenido">sdfdssdf</div>
-        <div id="pie">sdfdsf</div>
+        <main id="contenido">
+            <section id="contenido__carrousel">
+                <article class="contenido__carrousel--slider" id="contenido_carrousel-slider">
+                    <div class="slider">
+                        <div class="slide active">
+                            <img src="assets/img/carrousel/desarrollos_eficientes.jpg" alt="Desarrollos Eficientes.">
+                            <div class="info">
+                                <h2>DESARROLLOS EFICIENTES</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius quis neque et dictum. Nunc id nulla congue, tempus libero vel, congue tortor.</p>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <img src="assets/img/carrousel/desarrollos_escalables.jpg" alt="Desarrollos Escalables.">
+                            <div class="info">
+                                <h2>DESARROLLOS ESCALABLES</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius quis neque et dictum. Nunc id nulla congue, tempus libero vel, congue tortor.</p>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <img src="assets/img/carrousel/diseños_sorprendentes.jpg" alt="Diseños Sorprendentes.">
+                            <div class="info">
+                                <h2>DISEÑOS SORPRENDENTES</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius quis neque et dictum. Nunc id nulla congue, tempus libero vel, congue tortor.</p>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <img src="assets/img/carrousel/sitios_adaptables.jpg" alt="Sitios Adaptables.">
+                            <div class="info">
+                                <h2>SITIOS ADAPTABLES</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius quis neque et dictum. Nunc id nulla congue, tempus libero vel, congue tortor.</p>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <img src="assets/img/carrousel/sitios_interactivos.jpg" alt="Sitios Interactivos.">
+                            <div class="info">
+                                <h2>SITIOS INTERACTIVOS</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius quis neque et dictum. Nunc id nulla congue, tempus libero vel, congue tortor.</p>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <img src="assets/img/carrousel/sitios_responsivos.jpg" alt="Sitios Responsivos.">
+                            <div class="info">
+                                <h2>SITIOS RESPONSIVOS</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius quis neque et dictum. Nunc id nulla congue, tempus libero vel, congue tortor.</p>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <img src="assets/img/carrousel/sitios_veloces.jpg" alt="Sitios Veloces.">
+                            <div class="info">
+                                <h2>SITIOS VELOCES</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius quis neque et dictum. Nunc id nulla congue, tempus libero vel, congue tortor.</p>
+                            </div>
+                        </div>
+                        <div class="navigation">
+                            <button class="prev-btn">
+                                <svg role="img">
+                                    <use href="assets/img/iconos/iconos.svg#chevron-izq"></use>
+                                </svg>
+                            </button>
+                            <button class="next-btn">
+                                <svg role="img">
+                                    <use href="assets/img/iconos/iconos.svg#chevron-drch"></use>
+                                </svg>
+                            </button>
+                            <!-- <i class="fas fa-chevron-left prev-btn"></i>
+                            <i class="fas fa-chevron-right next-btn"></i> -->
+                        </div>
+                        <div class="navigation-visibility">
+                            <div class="slide-icon active"></div>
+                            <div class="slide-icon"></div>
+                            <div class="slide-icon"></div>
+                            <div class="slide-icon"></div>
+                            <div class="slide-icon"></div>
+                            <div class="slide-icon"></div>
+                            <div class="slide-icon"></div>
+                        </div>
+                    </div>
+                </article>
+                <!-- <div class="contenido__carrousel--slider" id="carrousel-contenido">
+                    <div class="contenido__carrousel--slide">
+                        <img src="assets/img/carrousel/desarrollos_eficientes.jpg" />
+                    </div>
+                    <div class="contenido__carrousel--slide">
+                        <img src="assets/img/carrousel/desarrollos_escalables.jpg" />
+                    </div>
+                    <div class="contenido__carrousel--slide">
+                        <img src="assets/img/carrousel/diseños_sorprendentes.jpg" />
+                    </div>
+                    <div class="contenido__carrousel--slide">
+                        <img src="assets/img/carrousel/sitios_adaptables.jpg" />
+                    </div>
+                    <div class="contenido__carrousel--slide">
+                        <img src="assets/img/carrousel/sitios_interactivos.jpg" />
+                    </div>
+                    <div class="contenido__carrousel--slide">
+                        <img src="assets/img/carrousel/sitios_responsivos.jpg" />
+                    </div>
+                    <div class="contenido__carrousel--slide">
+                        <img src="assets/img/carrousel/sitios_veloces.jpg" />
+                    </div>
+                </div> -->
+            </section>
+        </main>
+        <footer id="pie">sdfdsf</footer>
     </div>
 
     
