--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <div class="slide">
                             <img src="assets/img/carrousel/diseños_sorprendentes.jpg" alt="Diseños Sorprendentes.">
                             <div class="info">
-                                <h2>DISEÑOS SORPRENDENTES</h2>
+                                <h2>DISEÑOS IMPACTANTES</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius quis neque et dictum. Nunc id nulla congue, tempus libero vel, congue tortor.</p>
                             </div>
                         </div>
@@ -79,7 +79,7 @@
                         <div class="slide">
                             <img src="assets/img/carrousel/sitios_veloces.jpg" alt="Sitios Veloces.">
                             <div class="info">
-                                <h2>SITIOS VELOCES</h2>
+                                <h2>DESARROLLOS VELOCES</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius quis neque et dictum. Nunc id nulla congue, tempus libero vel, congue tortor.</p>
                             </div>
                         </div>
