--- a/index.html
+++ b/index.html
@@ -94,8 +94,6 @@
                                     <use href="assets/img/iconos/iconos.svg#chevron-drch"></use>
                                 </svg>
                             </button>
-                            <!-- <i class="fas fa-chevron-left prev-btn"></i>
-                            <i class="fas fa-chevron-right next-btn"></i> -->
                         </div>
                         <div class="navigation-visibility">
                             <div class="slide-icon active"></div>
@@ -108,29 +106,80 @@
                         </div>
                     </div>
                 </article>
-                <!-- <div class="contenido__carrousel--slider" id="carrousel-contenido">
-                    <div class="contenido__carrousel--slide">
-                        <img src="assets/img/carrousel/desarrollos_eficientes.jpg" />
+            </section>
+            <section class="contenido__info" id="contenido-info">
+                <article class="contenido__info--nosotros" id="contenido-nosotros">
+                    <h3 id="contenido-info-nosotros-titulo">Nosotros</h3>
+                    <p id="contenido-info-nosotros-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo efficitur purus ut iaculis. Nunc efficitur mi quis velit fringilla, ut cursus dolor mattis. Ut finibus erat a lobortis sollicitudin. Proin enim enim, accumsan non orci ac, vestibulum sodales dui. In non mi in orci ultricies malesuada eu vel purus. Ut laoreet sapien eget ultricies tincidunt. Aenean rhoncus, lectus ut tempor accumsan, eros sapien sodales neque, id convallis neque ante sit amet lorem. In ac maximus felis, vel euismod diam. Vivamus in volutpat orci, ut tincidunt nulla. Nullam varius ante sodales, euismod ligula in, auctor sem. Aliquam mollis justo eu odio venenatis, at lacinia turpis egestas. Aenean ac nibh imperdiet, rutrum velit vitae, varius nisl.
+                    <br><br>
+                    Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam tempor condimentum mi vel ullamcorper. Praesent in vulputate arcu. Aliquam et elit feugiat leo imperdiet convallis. Nulla facilisi. Aenean cursus semper sodales. Pellentesque tempor id diam imperdiet suscipit. Proin dictum congue dignissim. Vestibulum non luctus nibh. Integer id venenatis mauris. Proin ut blandit ligula, tristique pellentesque dui. Curabitur hendrerit dolor mollis leo tempus malesuada. Quisque ac purus luctus, tempus mauris at, tempor arcu. Nam maximus, metus vel accumsan sagittis, lacus lorem interdum eros, sed tempus magna arcu non purus.
+                    <br><br>
+                    Vestibulum interdum libero vitae vulputate pretium. Nulla diam ante, varius vitae maximus semper, facilisis a dolor. Sed non sem nisi. Sed molestie purus sapien, nec feugiat quam ullamcorper vitae. Donec in est eget lorem faucibus scelerisque. Pellentesque quis pharetra lorem. Pellentesque nec rutrum turpis.</p>
+                </article>
+                <article class="contenido__info--servicios" id="contenido-servicios">
+                    <div class="contenido__info--servicios_margensep" id="contenido-servicios-separador-top">
+                        <div></div>
                     </div>
-                    <div class="contenido__carrousel--slide">
-                        <img src="assets/img/carrousel/desarrollos_escalables.jpg" />
+                    <div class="contenido__info--servicios_cont">
+                        <h3 id="contenido-info-servicios-titulo">Servicios</h3>
+                        <div class="info__servicios--cont_cont">
+                            <div class="info__servicios--cont_box" id="contenido-servicios-frontend">
+                                <div class="servicios__cont--box_img">
+                                    <img src="assets/img/iconos/desarrollo_frontend.png" alt="Desarrollo Front End."/>
+                                </div>
+                                <h4>Desarrollo Front End</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo efficitur purus ut iaculis. Nunc efficitur mi quis velit fringilla, ut cursus dolor mattis.</p>
+                            </div>
+                            <div class="info__servicios--cont_box" id="contenido-servicios-servicio-tecnico">
+                                <div class="servicios__cont--box_img">
+                                    <img src="assets/img/iconos/reparacion_web.png" alt="Servicio Técnico."/>
+                                </div>
+                                <h4>Servicio Técnico</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo efficitur purus ut iaculis. Nunc efficitur mi quis velit fringilla, ut cursus dolor mattis.</p>
+                            </div>
+                            <div class="info__servicios--cont_box" id="contenido-servicios-imagen-corporativa">
+                                <div class="servicios__cont--box_img">
+                                    <img src="assets/img/iconos/imagen_corporativa.png" alt="Imagen Corporativa."/>
+                                </div>
+                                <h4>Imagen Corporativa</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo efficitur purus ut iaculis. Nunc efficitur mi quis velit fringilla, ut cursus dolor mattis.</p>
+                            </div>
+                            <div class="info__servicios--cont_box" id="contenido-servicios-consultoria-it">
+                                <div class="servicios__cont--box_img">
+                                    <img src="assets/img/iconos/consultoria_web.png" alt="Consultoria IT."/>
+                                </div>
+                                <h4>Consultoría IT</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo efficitur purus ut iaculis. Nunc efficitur mi quis velit fringilla, ut cursus dolor mattis.</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="contenido__carrousel--slide">
-                        <img src="assets/img/carrousel/diseños_sorprendentes.jpg" />
+                    <div class="contenido__info--servicios_margenbott">
+                        <div></div>
                     </div>
-                    <div class="contenido__carrousel--slide">
-                        <img src="assets/img/carrousel/sitios_adaptables.jpg" />
-                    </div>
-                    <div class="contenido__carrousel--slide">
-                        <img src="assets/img/carrousel/sitios_interactivos.jpg" />
-                    </div>
-                    <div class="contenido__carrousel--slide">
-                        <img src="assets/img/carrousel/sitios_responsivos.jpg" />
-                    </div>
-                    <div class="contenido__carrousel--slide">
-                        <img src="assets/img/carrousel/sitios_veloces.jpg" />
-                    </div>
-                </div> -->
+                </article>
+                <article>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                </article>
             </section>
         </main>
         <footer id="pie">sdfdsf</footer>
