--- a/index.html
+++ b/index.html
@@ -157,35 +157,29 @@
                         <div></div>
                     </div>
                 </article>
-                <article>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
+                <article class="contenido__info--portfolio" id="contenido-portfolio">
+                    <h3 id="contenido-info-portfolio-titulo">Portfolio</h3>
+                    <div class="contenido__info--portfolio_cont" id="inicio-contenido-portfolio-lista">
+                        <!-- <div class="contenido__info--portfolio_box" >
+                            <h4>International Fasteners S.A.</h4>
+                            <div class="info__portfolio--box_img">
+                                <a href="https://www.intfasteners.com.ar/" target="_blank" rel="noopener noreferrer">
+                                    <img src="assets/img/portfolio/international_fasteners_web.jpg" alt="International Fasteners S.A." />
+                                </a>
+                            </div>
+                            <p>Desarrollo Web Front End</p>
+                        </div>
+                        <div class="contenido__info--portfolio_box"></div>
+                        <div class="contenido__info--portfolio_box"></div> -->
+                    </div>
+                    <div>
+                        <button class="btn_01">Ver Mas</button>
+                    </div>
                 </article>
             </section>
         </main>
         <footer id="pie">sdfdsf</footer>
     </div>
-
-    
     <script src="assets/js/index.js" type="module"></script>
 </body>
 </html>
