--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Diseño y Desarrollo Web Front-End, Desarrollo de Aplicaciones Web y Aplicaciones Móviles, Soluciones de Diseño Gráfico e Imagen de Marca, Producción de contenidos. Para empresas y particulares. Búho Negro Desarrollos. ">
+    <meta name="description" content="Diseño y Desarrollo Web Front-End, Desarrollo de Aplicaciones Web y Aplicaciones Móviles, Soluciones de Diseño Gráfico e Imagen de Marca, Producción de contenidos. Para empresas y particulares. Búho Wapps Desarrollos. ">
     <meta name="keywords" content="Servicios de Diseño Web, Desarrollo Web, Front-End, Aplicaciones Móviles, Aplicaciones Web, Diseño Gráfico y Producción de Contenidos. Búho Negro Desarrollos.">
-    <title>BÚHO NEGRO DESARROLLOS | DESARROLLO WEB, SOLUCIONES GRÁFICAS Y MERCADOTECNIA EN ARGENTINA.</title>
+    <title>BÚHO WAPPS DESARROLLOS | DESARROLLO WEB, SOLUCIONES GRÁFICAS Y MERCADOTECNIA EN ARGENTINA.</title>
     <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon/apple-icon-72x72.png">
@@ -160,25 +160,18 @@
                 <article class="contenido__info--portfolio" id="contenido-portfolio">
                     <h3 id="contenido-info-portfolio-titulo">Portfolio</h3>
                     <div class="contenido__info--portfolio_cont" id="inicio-contenido-portfolio-lista">
-                        <!-- <div class="contenido__info--portfolio_box" >
-                            <h4>International Fasteners S.A.</h4>
-                            <div class="info__portfolio--box_img">
-                                <a href="https://www.intfasteners.com.ar/" target="_blank" rel="noopener noreferrer">
-                                    <img src="assets/img/portfolio/international_fasteners_web.jpg" alt="International Fasteners S.A." />
-                                </a>
-                            </div>
-                            <p>Desarrollo Web Front End</p>
-                        </div>
-                        <div class="contenido__info--portfolio_box"></div>
-                        <div class="contenido__info--portfolio_box"></div> -->
                     </div>
                     <div>
-                        <button class="btn_01">Ver Mas</button>
+                        <button class="btn_01" id="botonMostrar"></button>
                     </div>
                 </article>
             </section>
         </main>
-        <footer id="pie">sdfdsf</footer>
+        <footer id="pie">
+            <section class="pie__box"></section>
+            <section class="pie__box"></section>
+            <section class="pie__box"></section>
+        </footer>
     </div>
     <script src="assets/js/index.js" type="module"></script>
 </body>
