--- a/index.html
+++ b/index.html
@@ -161,8 +161,9 @@
                     <h3 id="contenido-info-portfolio-titulo">Portfolio</h3>
                     <div class="contenido__info--portfolio_cont" id="inicio-contenido-portfolio-lista">
                     </div>
-                    <div>
-                        <button class="btn_01" id="botonMostrar"></button>
+                    <div class="contenido__info--portfolio_btn">
+                        <button class="btn_01 activo" id="botonMostrarMas">MOSTRAR MAS</button>
+                        <button class="btn_01" id="botonMostrarMenos">MOSTRAR MENOS</button>
                     </div>
                 </article>
             </section>
