--- a/index.html
+++ b/index.html
@@ -171,7 +171,16 @@
             </section>
         </main>
         <footer id="pie">
-            <section class="pie__box"></section>
+            <section class="pie__box" id="pie__marca">
+                <article class="pie__marca">
+                    <div class="pie__marca--img">
+                        <img src="assets/img/buho-negro-fondo-gris.png" alt="BÚHO WAPPS DESARROLLOS" />
+                    </div>
+                    <div class="pie__marca--txt">
+                        <h1><span class="pie__marca--h1_01">BÚHO</span><span class="pie__marca--h1_02">WAPPS</span></h1>
+                    </div>
+                </article>
+            </section>
             <section class="pie__box"></section>
             <section class="pie__box"></section>
         </footer>
