--- a/index.html
+++ b/index.html
@@ -173,12 +173,37 @@
         <footer id="pie">
             <section class="pie__box" id="pie__marca">
                 <article class="pie__marca">
-                    <div class="pie__marca--img">
-                        <img src="assets/img/buho-negro-fondo-gris.png" alt="BÚHO WAPPS DESARROLLOS" />
+                    <div class="pie__marca--cont">
+                        <div class="pie__marca--img">
+                            <img src="assets/img/buho-negro-fondo-gris.png" alt="BÚHO WAPPS DESARROLLOS" />
+                        </div>
+                        <div class="pie__marca--txt">
+                            <h1><span class="pie__marca--h1_01">BÚHO</span><span class="pie__marca--h1_02">WAPPS</span></h1>
+                        </div>
                     </div>
-                    <div class="pie__marca--txt">
-                        <h1><span class="pie__marca--h1_01">BÚHO</span><span class="pie__marca--h1_02">WAPPS</span></h1>
-                    </div>
+                    <ul class="pie__marca--redes">
+                        <li>
+                            <a>
+                                <svg role="img">
+                                    <use href="assets/img/iconos/iconos.svg#linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a>
+                                <svg role="img">
+                                    <use href="assets/img/iconos/iconos.svg#instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a>
+                                <svg role="img">
+                                    <use href="assets/img/iconos/iconos.svg#github"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                 </article>
             </section>
             <section class="pie__box"></section>
