--- a/index.html
+++ b/index.html
@@ -38,6 +38,24 @@
                 </a>
             </div>
         </div>
+        <div class="contenedor__whatsapp" id="contenedor-whatsapp">
+            <div>
+                <a href="https://api.whatsapp.com/send?phone=5491144400694" target="_blank" rel="noopener noreferrer">
+                    <svg role="img">
+                        <use href="assets/img/iconos/iconos.svg#whatsapp"></use>
+                    </svg>
+                </a>
+            </div>
+        </div>
+        <div class="contenedor__telegram" id="contenedor-telegram">
+            <div>
+                <a href="https://api.whatsapp.com/send?phone=5491144400694" target="_blank" rel="noopener noreferrer">
+                    <svg role="img">
+                        <use href="assets/img/iconos/iconos.svg#telegram"></use>
+                    </svg>
+                </a>
+            </div>
+        </div>
         <header id="cabecera">
         </header>
         <main id="contenido">
@@ -230,7 +248,7 @@
                 <form class="pie__contactos--form">
                     <ul>
                         <li>
-                            <input type="email" class="pie__contactos--form_ipt" placeholder="Escriba su correo">
+                            <input type="email" class="pie__contactos--form_ipt" placeholder="Escriba su correo" id="newsletter-mail">
                         </li>
                         <li>
                             <input type="submit" class="btn_03" value="OK">
