--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div>
                 <a href="#inicio" id="accion-subir">
                     <svg role="img">
-                        <use href="assets/img/iconos/iconos.svg#manito-arriba-01"></use>
+                        <use href="assets/img/iconos/iconos.svg#flecha-arriba-05"></use>
                     </svg>
                 </a>
             </div>
@@ -54,6 +54,49 @@
                         <use href="assets/img/iconos/iconos.svg#telegram"></use>
                     </svg>
                 </a>
+            </div>
+        </div>
+        <div class="cabeza__anun--cont" id="cabeza__anun">
+            <div class="cabeza__anun--cont_cbz">
+                <div class="cabeza__iconos cerrar" id="cabeza__anun--cer">
+                    X
+                </div>
+                <div class="cabeza__anun--cont_cbz-menu">
+                    <div class="cabeza__anun--cont_cbz-btn" id="cabeza__anun--nove">Novedades</div>
+                    <div class="cabeza__anun--cont_cbz-btn" id="cabeza__anun--prom">Promociones</div>
+                </div>
+                <div class="cabeza__anun--cont_bdr">
+                    <div class="cabeza__anun--cont_bdr-anim novedades" id="cabeza__anun--btn_anim"></div>
+                </div>
+            </div>
+            <div class="cabeza__anun--cont_info activo" id="cabeza__anun--nove_info">
+                <div class="cabeza__anun--cont_info-cont">
+                    <a href="#">
+                        <div class="cabeza__anun--cont_info-cont_box">
+                            <h1>¡Llegaron las variedades de otoño!</h1>
+                            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est officia consectetur sit ea, blanditiis molestiae.</h2>
+                            <p>Ver Ya <span><i class="fa-solid fa-chevron-right"></i></span></p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="cabeza__anun--cont_info" id="cabeza__anun--prom_info">
+                <div class="cabeza__anun--cont_info-cont">
+                    <a href="#">
+                        <div class="cabeza__anun--cont_info-cont_box">
+                            <h1>¡Súper liquidación de temporada!</h1>
+                            <h2>¡Hasta un 60% OFF en ramos medianos y grandes, arreglos florales y plantas de verano!</h2>
+                            <p>Pedir Ya <span><i class="fa-solid fa-chevron-right"></i></span></p>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="cabeza__anun--cont_info-cont_box">
+                            <h1>¡El amor se siente en el aire!</h1>
+                            <h2>¡Mirá las súper promociones que preparamos para el 14 de febrero! ¡Hasta 10% OFF en ramos especiales y envío gratis en CABA!</h2>
+                            <p>Pedir Ya <span><i class="fa-solid fa-chevron-right"></i></span></p>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
         <header id="cabecera">
@@ -243,7 +286,7 @@
                 </ul>
             </section>
             <section class="pie__contactos" id="pie-contactos">
-                <h3 id="contactos-ancla">LISTA DE CORREO</h3>
+                <h3>LISTA DE CORREO</h3>
                 <P>Suscríbete para recibir semanalmente las últimas novedades sobre mis charlas y seminarios.</P>
                 <form class="pie__contactos--form">
                     <ul>
